fix overflow to be responsive

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1773,7 +1773,7 @@ input, select, textarea {
 		width: -moz-max-content;
 		width: -webkit-max-content;
 		width: -ms-max-content;
-		width: max-content;
+		width: 100%;
 		margin-bottom: 2em;
 	}
 
